k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ampac-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "ampac-cert"
spec:
  rules:
  - http:
      paths:
      - path: /sites/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: brain-service
            port:
              number: 80
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: brain-service
            port:
              number: 80
